updated travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_install:
           - sudo apt-get update -qq
 install:
           - sudo apt-get install -qq gcc-avr binutils-avr avr-libc
-script: make
+script: make hex
